<resources>
    <string name="app_name">Hockey Counter</string>
    <string name="team_a">Team A</string>
    <string name="_0">0</string>
    <string name="_3_points">+3 Points</string>
    <string name="_2_points">+2 Points</string>
    <string name="free_throw">Free Throw</string>
    <string name="team_b">Team B</string>
    <string name="reset">Reset</string>
    <string name="icing">Icing</string>
    <string name="offside">Offside</string>
    <string name="goal">Goal</string>
    <string name="nhl">nhl</string>
</resources>
